// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interstitial renders correctly and matches snapshot 1`] = `
<div
  class="interstitial-container container-center-100"
  data-testid="interstitial"
>
  <div
    class="flex jc-center ai-center w-100"
  >
    <a
      class="link ln-link theme-button interstitial-button py-12 px-16 gap-8 bg-secondary__hover rounded-4 border border-all border-thin border-neutral-light-800 text-neutral-light-800 uppercase text-12 font-bold text-center break-word flex jc-center ai-center"
      data-mrf-recirculation="n_interstitial"
      href="https://ejemplo.com"
      rel="nofollow"
      target="_blank"
      title="Texto del botón"
    >
      Texto del botón
      <i
        class="icon theme-icon --icon-20"
      >
        <mock-icon
          name="arrowRight"
        />
      </i>
    </a>
  </div>
</div>
`;

exports[`Interstitial renders with FotoAl100 layout and matches snapshot 1`] = `
<div
  class="interstitial-container container-center-100 pb-32"
  data-testid="interstitial"
>
  <div
    class="flex jc-center ai-center w-100"
  >
    <a
      class="link ln-link theme-button interstitial-button py-12 px-16 gap-8 bg-secondary__hover rounded-4 border border-all border-thin border-neutral-light-800 text-neutral-light-800 uppercase text-12 font-bold text-center break-word flex jc-center ai-center"
      data-mrf-recirculation="n_interstitial"
      href="https://ejemplo.com"
      rel="nofollow"
      target="_blank"
      title="Texto del botón"
    >
      Texto del botón
      <i
        class="icon theme-icon --icon-20"
      >
        <mock-icon
          name="arrowRight"
        />
      </i>
    </a>
  </div>
</div>
`;
